links and images optimized

--- a/about.html
+++ b/about.html
@@ -182,10 +182,8 @@
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-behance"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://facebook.com/Respect.Truth"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://behance.net/ukponondaudo"><i class="bx bxl-behance"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -236,9 +234,7 @@
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
+                  <a href="https://facebook.com/uduak.genesis"><i class="bx bxl-facebook"></i></a>
                   <a href="https://linkedin.com/in/uduak-usoro-5501591a3"><i class="bx bxl-linkedin"></i></a>
                 </div>
               </div>
@@ -254,10 +250,9 @@
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-7.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://facebook.com/profile.php?id=100022086265883"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://github.com/Ekong05"><i class="bx bxl-github"></i></a>
+                  <a href="https://linkedin.com/in/chris-ekong-0b12201b3"><i class="bx bxl-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -300,49 +295,49 @@
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-4.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-5.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-6.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-8.svg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+              <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
             </div>
           </div>
 
