--- a/portfolio.html
+++ b/portfolio.html
@@ -108,207 +108,112 @@
               <h4>Joseph Unomieta</h4>
               <p>Web Developer | Project Manager</p>
               <div class="social">
+                <a href="https://twitter.com/unomieta"><i class="bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/joe.unomieta"><i class="bx bxl-facebook"></i></a>
+                <a href="https://github.com/RomeoChris"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin.com/in/joseph-unomieta"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item *">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Precious Uwak</h4>
+              <p>Content Writer</p>
+              <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
                 <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-github"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"></i></a>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
+            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Christopher Emediong</h4>
+              <p>Android Mobile Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/chris_priority"><i class="bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/chris.eminence.3"><i class="bx bxl-facebook"></i></a>
+                <a href="https://github.com/chris-eminence"><i class="bx bxl-github"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-managers">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-games">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Respect Ndaudo</h4>
               <p>Product Designer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/Respect.Truth"><i class="bx bxl-facebook"></i></a>
+                <a href="https://behance.net/ukponondaudo"><i class="bx bxl-behance"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Respect Ndaudo">  </i></a>
+              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
             <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
+              <h4>Chris Ekong</h4>
+              <p>Android Mobile Developer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/profile.php?id=100022086265883"><i class="bx bxl-facebook"></i></a>
+                <a href="https://github.com/Ekong05"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin.com/in/chris-ekong-0b12201b3"><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
+              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
+              <h4>King Obong</h4>
+              <p>Full Stack Web Developer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/sirkiosta"><i class="bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/sirkiosta"><i class="bx bxl-facebook"></i></a>
+                <a href="https://github.com/sirkiosta"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin/in/sirkiosta"><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
+              <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
+              <h4>Bright Emmanuel</h4>
+              <p>Graphic Designer</p>
               <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
                 <a href=""><i class="bx bxl-facebook"></i></a>
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
+              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
+              <h4>Emmanuel Jackson</h4>
+              <p>Web Developer</p>
               <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
                 <a href=""><i class="bx bxl-facebook"></i></a>
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
+              <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
@@ -345,49 +250,49 @@
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-4.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-5.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-6.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-8.svg" class="img-fluid" alt="">
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
-            <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
           </div>
         </div>
 
