--- a/brochure.html
+++ b/brochure.html
@@ -171,7 +171,7 @@
             <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
             <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="https://linkedin.com/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
         
