portfolio image updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joseph Unomieta</h4>
+              <h4>Frank </h4>
               <p>Web Developer | Project Manager</p>
               <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
