--- a/contact.html
+++ b/contact.html
@@ -101,13 +101,13 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>hello@hachstacks.com<br>hachstacks@gmail.com</p>
+                  <p>hachstacks@gmail.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Whatsapp & Calls:</h4>
-                  <p>+234 815 684 1952<br>+234 817 353 0108</p>
+                  <p>+234 815 684 1952<br>+234 705 188 5584</p>
                 </div>
               </div>
             </div>
