--- a/portfolio.html
+++ b/portfolio.html
@@ -217,18 +217,18 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Frank </h4>
-              <p>Web Developer | Project Manager</p>
+              <h4>Frank Udoh</h4>
+              <p>Web Developer</p>
               <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
                 <a href=""><i class="bx bxl-facebook"></i></a>
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
+              <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
