several commits made to events pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html" >Home</a></li>
 
-          <li class="dropdown"><a href="about.html" class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
@@ -216,7 +216,7 @@
               <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
-
+  
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -236,70 +236,6 @@
     </section><!-- End Portfolio Section -->
 
   </main><!-- End #main -->
-
-
-  <!-- ======= Our Clients Section ======= -->
-  <section id="clients" class="clients">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-title">
-        <h2>Sponsors</h2>
-      </div>
-
-      <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-4.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-5.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-6.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-8.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-  </section><!-- End Our Clients Section -->
 
 </main><!-- End #main -->
 
