--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="about.html"  class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="row">
-
+ 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
@@ -187,7 +187,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Respect Ndaudo</h4>
+                <h4>Ukpono Ndaudo</h4>
                 <span>Product Designer</span>
               </div>
             </div>
@@ -216,10 +216,7 @@
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://www.facebook.com/ekemlnl.ekemlnludoh"><i class="bx bxl-facebook"></i></a>
                 </div>
               </div>
               <div class="member-info">
