--- a/brochure.html
+++ b/brochure.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="about.html" class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
@@ -111,7 +111,7 @@
             <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
           </div>
         </div>
-
+ 
         <div class="col-lg-3 col-md-4 col-6">
           <div class="client-logo">
             <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
