--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
 
-          <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
