internship page fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,11 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="internship.html">Internship</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
@@ -102,7 +102,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-managers">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Joseph Unomieta</h4>
@@ -202,7 +202,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Emmanuel Jackson</h4>
