--- a/about.html
+++ b/about.html
@@ -47,23 +47,24 @@
           <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="join.html">Join Us</a></li>
+          <li><a href="internship.html">Internship</a></li>
+          <li><a href="contact.html">Donate</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
-        <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/hachstacks" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/hachstacks" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://linkedin.com/in/hachstacks" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
     </div>
