--- a/faqs.html
+++ b/faqs.html
@@ -49,11 +49,11 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="internship.html">Internship</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
