--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                   <a href="https://twitter.com/sirkiosta"><i class="bx bxl-twitter"></i></a>
                   <a href="https://facebook.com/sirkiosta"><i class="bx bxl-facebook"></i></a>
                   <a href="https://github.com/sirkiosta"><i class="bx bxl-github"></i></a>
-                  <a href="https://linkedin/in/sirkiosta"><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://linkedin.com/in/sirkiosta"><i class="bx bxl-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
