--- a/brochure.html
+++ b/brochure.html
@@ -47,6 +47,8 @@
           <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
@@ -54,7 +56,6 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="internship.html">Internship</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
