--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
@@ -54,7 +56,6 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="internship.html">Internship</a></li>
-          <li><a href="contact.html" class="active">Contact Us</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
