--- a/join.html
+++ b/join.html
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html" >Home</a></li>
 
-          <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
@@ -56,7 +56,7 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="internship.html">Internship</a></li>
-          <li><a href="join.html" class="active">Join Us</a></li>
+          <li><a href="contact.html">Donate</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
