--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="internship.html">Internship</a></li>
-          <li><a href="join.html">Join Us</a></li>
+          <li><a href="contact.html">Donate</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
