--- a/internship.html
+++ b/internship.html
@@ -120,7 +120,7 @@
                     <div class="col-12">
                         <div class="section-title">
                             <h2 class="">What you stand to benefit</h2>
-                            <p class=" ">Some benefits of the HachStacks includes:</p>
+                            <p class=" ">Some benefits of the HachStacks internship 1.0 includes:</p>
                         </div>
                     </div>
                 </div>
@@ -179,10 +179,10 @@
                 Akwa Ibom State University<br><br>
               </p>
               <div class="social-links text-md-right pt-3 pt-md-0">
-                <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-                <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://wa.me/+2348156841952" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://twitter.com/hachstacks" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/hachstacks" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+                <a href="https://linkedin.com/in/hachstacks" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
             
