--- a/portfolio.html
+++ b/portfolio.html
@@ -62,9 +62,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
-        <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/hachstacks" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/hachstacks" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://linkedin.com/in/hachstacks" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
     </div>
@@ -253,10 +253,10 @@
             Akwa Ibom State University<br><br>
           </p>
           <div class="social-links text-md-right pt-3 pt-md-0">
-            <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-            <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://wa.me/+2348156841952" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+            <a href="https://twitter.com/hachstacks" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+            <a href="https://facebook.com/hachstacks" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+            <a href="https://linkedin.com/in/hachstacks" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
         
