--- a/internship.html
+++ b/internship.html
@@ -147,12 +147,12 @@
                         <p> Access to Premium courses, articles, tools necessary for daily problems solving.</p>
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-6">
-                        <i class="bx bx-infinite bx-flip-vertical bx-md text-paste-color"></i>
+                        <i class="bx bxs-time-five bx-md text-paste-color"></i>
                         <h5 class="my-4">Real time work experience</h5>
                         <p>As an intern, you solve real life problems alongside tech experts who are willing to share knowledge 247</p>
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-6">
-                        <i class="bx bx-infinite bx-flip-vertical bx-md text-paste-color"></i>
+                        <i class="bx bx-at bx-md text-paste-color"></i>
                         <h5 class="my-4">Meet tech eco-system experts</h5>
                         <p> Direct access to experts in your chosen career path. Awesome right? These and lot more...</p>
                     </div>
