contact script removed

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/c4b1d097c8df79513f4d3d70e/751b31fdc59083ca03a328828.js");</script>
 </head>
 
 <body>
@@ -260,10 +259,10 @@
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Join Our Newsletter</h4>
+          <h4>Join HachStacks Group</h4>
           <p>Stay updated with our events and other activities!</p>
-          <form action="" method="post">
-            <input type="email" name="email"><input type="submit" value="Subscribe">
+          <form action="https://wa.me/+2348156841952" method="post">
+            <input type="number" name="number"><input type="submit" value="Subscribe">
           </form>
         </div>
 
