--- a/contact.html
+++ b/contact.html
@@ -102,13 +102,13 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>hachstacks@gmail.com</p>
+                  <p><a href="mailto:hello@hachstacks.com">hello@hachstacks.com</a></p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Whatsapp & Calls:</h4>
-                  <p>+234 815 684 1952<br>+234 705 188 5584</p>
+                  <p><a href="https://wa.me/+2348156841952">+234 815 684 1952</a></p>
                 </div>
               </div>
             </div>
@@ -117,101 +117,10 @@
 
         </div>
 
-        <div class="row mt-5 justify-content-center" data-aos="fade-up">
-          <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form" netlify>
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
-
       </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
-
-  <!-- ======= Our Clients Section ======= -->
-  <section id="clients" class="clients">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-title">
-        <h2>Sponsors</h2>
-      </div>
-
-      <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
-          </div>
-        </div>
- 
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-4.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-5.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-6.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-8.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-  </section><!-- End Our Clients Section -->
 
 </main><!-- End #main -->
 
@@ -222,7 +131,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-3 col-md-6 footer-contact footer-links">
+        <div class="col-lg-4 col-md-6 footer-contact footer-links">
           <h3>HachStacks</h3>
           <p>
             Akwa Ibom State University<br><br>
@@ -236,7 +145,7 @@
         </div>
         
 
-        <div class="col-lg-2 col-md-6 footer-links">
+        <div class="col-lg-4 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
@@ -256,14 +165,6 @@
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
           </ul>
-        </div>
-
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Join HachStacks Group</h4>
-          <p>Stay updated with our events and other activities!</p>
-          <form action="https://wa.me/+2348156841952" method="post">
-            <input type="number" name="number"><input type="submit" value="Subscribe">
-          </form>
         </div>
 
       </div>
